leyenda y fix logica aprobable regularizable

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
@@ -35,6 +36,11 @@
               <button type="button" class="btn btn-primary" id="calcular">
                 Calcular
               </button>
+            </div>
+          </div>
+          <div class="form-group" id="leyenda">
+            <div class="row-10">
+              <i class="bi bi-square" id="leyenda-aprobada"></i> Aprobada  <i class="bi bi-square-fill" id="leyenda-regularizada"></i> Regularizada (Debe final)  <i class="bi bi-square-fill" id="leyenda-aprobable"></i> Puede cursar y rendir final  <i class="bi bi-square-fill" id="leyenda-regularizable"></i> Puede cursar, pero no rendir final  <i class="bi bi-square" id="leyenda-no-cursable"></i> No puede cursar
             </div>
           </div>
         </form>
