--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-    <script type="module" src="js/script.js"></script>
+    <script type="module" src="script.ts"></script>
   </head>
   <body>
     <div class="container-fluid d-flex h-100 flex-column">
